JumpScript/tests/baselines/reference/emptyVariableDeclarationBindingPatterns02_ES5iterable.errors.txt
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump(2,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump(3,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump(4,11): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump(6,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump(7,9): error TS1182: A destructuring declaration must have an initializer.
tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump(8,11): error TS1182: A destructuring declaration must have an initializer.


==== tests/cases/conformance/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5iterable.jump (6 errors) ====
    (function () {
        var {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const {};
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    
        var [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const [];
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    })();